Bug 157174 - LibreOffice crashes when clicking "Print Preview"
Summary: LibreOffice crashes when clicking "Print Preview"
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.5.2 release
Hardware: x86-64 (AMD64) All
: high major
Assignee: Julien Nabet
URL:
Whiteboard: target:24.2.0 target:7.6.2 target:7.5.7
Keywords: bibisected, bisected, haveBacktrace, regression
: 157314 (view as bug list)
Depends on:
Blocks: Print-Preview Crash
  Show dependency treegraph
 
Reported: 2023-09-10 12:06 UTC by bibidiboom
Modified: 2023-09-20 07:57 UTC (History)
8 users (show)

See Also:
Crash report or crash signature: ["SdrEdgeObj::Reformat()","SdrObject::GetBroadcaster() const"]


Attachments
Document having problem with Print Preview (33.00 KB, application/msword)
2023-09-10 12:07 UTC, bibidiboom
Details
bt with debug symbols (11.37 KB, text/plain)
2023-09-10 12:34 UTC, Julien Nabet
Details
minimal reproducer (11.00 KB, application/msword)
2023-09-15 11:18 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bibidiboom 2023-09-10 12:06:15 UTC
Description:
Using the latest pre-released version of Libreoffice, 7.6.1.2.

Steps to Reproduce:
1. Open the document attached here
2. Go to File and click on "Print Preview"
3.

Actual Results:
It crashes immediately as I try to preview the document. The program offers me to send the crash report, but I see no number/ticket I can open to see the actual report.

Expected Results:
Writer shouldn't crash.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
I am using the latest pre-released version of Libreoffice, 7.6.1.2.
Comment 1 bibidiboom 2023-09-10 12:07:20 UTC
Created attachment 189469 [details]
Document having problem with Print Preview
Comment 2 Julien Nabet 2023-09-10 12:34:41 UTC
Created attachment 189470 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2023-09-10 12:35:53 UTC
I could reproduce this also with LO Debian package 7.5.5.2
Comment 4 elmau 2023-09-10 21:24:47 UTC
I could reproduce this also with ArchLinux:

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 16; OS: Linux 6.4; UI render: default; VCL: gtk3
Locale: es-MX (en_US.UTF-8); UI: en-US
7.5.5-3
Calc: threaded
Comment 5 m_a_riosv 2023-09-10 21:46:25 UTC
Reproducible with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 65325f9c2f9aff6782fa5df910e8f2f5e63dfd93
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo

Resaving the file with Word doesn't solve the issue.
Comment 6 elmau 2023-09-10 23:30:34 UTC
Reproducible with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: be9d7bee88eff89c0d361f23abb447ac2086c3b4
CPU threads: 16; OS: Linux 6.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 7 Xisco Faulí 2023-09-15 07:31:34 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-05-22 16:12:23 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-05-23 14:33:49 +0200
commit 4fac9a110961f19006c3041be0c4b920a5eafe7b (patch)
tree 57810308d41c0eb1e9b93fea5458f32c08541ec7
parent 1167bfefe539417a24016f2c4e69f39ed10d2624 (diff)
tdf#155410 speedup shutdown when document has lots of images

Bisected with: bibisect-linux64-7.6
Comment 8 stragu 2023-09-15 11:18:32 UTC
Created attachment 189604 [details]
minimal reproducer

Reproduced for me too.
https://crashreport.libreoffice.org/stats/crash_details/548d4724-811e-46cb-9738-bf1ca068e953
I noticed that the header has two lines shown in 7.5 but not in 7.4. They don't show in the navigator.
Attached is the smallest reproducer I could create, with the header containing one phantom line, repeated on two pages.
No crash without the line, no crash with one page.
Comment 9 Commit Notification 2023-09-15 11:46:07 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/17cd1dacf6a4b587b524edc7384ff26990208132

tdf#157174: fix crash when clicking "Print Preview"

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Julien Nabet 2023-09-15 11:49:10 UTC
Cherry-pick for 7.6 branch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/156950
Comment 11 Julien Nabet 2023-09-15 11:59:22 UTC
(In reply to Stéphane Guillou (stragu) from comment #8)
> Created attachment 189604 [details]
> minimal reproducer
>...
Just for information, I could reproduce the crash with LO Debian package 7.5.6 but I don't reproduce this with master sources updated today including the patch.
Since the bt was the same, I expected this but just wanted to be sure since you took the time to provide a minimal test.
Now perhaps would be interested in using your example to add a QA test.
Comment 12 Commit Notification 2023-09-16 06:31:43 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/c0723e29ed634a05223f22afc4846a3131fbe8d3

tdf#157174: fix crash when clicking "Print Preview"

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-09-16 06:32:47 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c3c84c8230124fb6e31bd77eab22f46b5527813c

tdf#157174: fix crash when clicking "Print Preview"

It will be available in 7.5.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Xisco Faulí 2023-09-19 09:06:52 UTC
*** Bug 157314 has been marked as a duplicate of this bug. ***
Comment 15 stragu 2023-09-20 07:57:24 UTC
(In reply to Julien Nabet from comment #11)
> Just for information, I could reproduce the crash with LO Debian package
> 7.5.6 but I don't reproduce this with master sources updated today including
> the patch.
> Since the bt was the same, I expected this but just wanted to be sure since
> you took the time to provide a minimal test.
> Now perhaps would be interested in using your example to add a QA test.

No crash with minimal reproducer and:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e472b5b557d2b43b41e488c83db2b188de499610
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Julien! Yes, a test would be much appreciated :)